better java 9 hack